[package]
name = "wrkflw-evaluator"
version.workspace = true
edition.workspace = true
description = "Workflow evaluation functionality for wrkflw execution engine"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
wrkflw-models = { path = "../models", version = "0.7.0" }
wrkflw-validators = { path = "../validators", version = "0.7.0" }

# External dependencies
colored.workspace = true
serde_yaml.workspace = true 
