[package]
name = "wrkflw-executor"
version.workspace = true
edition.workspace = true
description = "Workflow execution engine for wrkflw"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
wrkflw-models = { path = "../models", version = "0.5.0" }
wrkflw-parser = { path = "../parser", version = "0.5.0" }
wrkflw-runtime = { path = "../runtime", version = "0.5.0" }
wrkflw-logging = { path = "../logging", version = "0.5.0" }
wrkflw-matrix = { path = "../matrix", version = "0.5.0" }
wrkflw-utils = { path = "../utils", version = "0.5.0" }

# External dependencies
async-trait.workspace = true
bollard.workspace = true
chrono.workspace = true
dirs.workspace = true
futures.workspace = true
futures-util.workspace = true
lazy_static.workspace = true
num_cpus.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
