[package]
name = "wrkflw-logging"
version.workspace = true
edition.workspace = true
description = "Logging functionality for wrkflw workflow execution engine"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
wrkflw-models = { path = "../models", version = "0.6.0" }

# External dependencies
chrono.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_yaml.workspace = true
