[package]
name = "wrkflw-matrix"
version.workspace = true
edition.workspace = true
description = "Matrix job parallelization for wrkflw workflow execution engine"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
wrkflw-models = { path = "../models", version = "0.5.0" }

# External dependencies
indexmap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
