[package]
name = "wrkflw-runtime"
version.workspace = true
edition.workspace = true
description = "Runtime execution environment for wrkflw workflow engine"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
wrkflw-models = { path = "../models", version = "0.6.0" }
wrkflw-logging = { path = "../logging", version = "0.6.0" }

# External dependencies
async-trait.workspace = true
once_cell = "1.19"
serde.workspace = true
serde_yaml.workspace = true
tempfile = "3.9"
tokio.workspace = true
futures = "0.3"
wrkflw-utils = { path = "../utils", version = "0.6.0" }
which = "4.4"
