[package]
name = "wrkflw-secrets"
version = "0.7.1"
edition = "2021"
authors = ["wrkflw contributors"]
description = "Secrets management for wrkflw workflow execution"
license = "MIT"
keywords = ["secrets", "workflow", "ci-cd", "github-actions"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
aes-gcm = "0.10"
rand = "0.8"
dirs = "5.0"
tracing = "0.1"
regex = "1.10"
url = "2.4"
async-trait = "0.1"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"

# Optional dependencies for different secret providers (commented out for compatibility)
# reqwest = { version = "0.11", features = ["json"], optional = true }
# aws-sdk-secretsmanager = { version = "1.0", optional = true }
# azure_security_keyvault = { version = "0.16", optional = true }

[features]
default = ["env-provider", "file-provider"]
env-provider = []
file-provider = []
# Cloud provider features are planned for future implementation
# vault-provider = ["reqwest"]
# aws-provider = ["aws-sdk-secretsmanager", "reqwest"]
# azure-provider = ["azure_security_keyvault", "reqwest"]
# gcp-provider = ["reqwest"]
# all-providers = ["vault-provider", "aws-provider", "azure-provider", "gcp-provider"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
uuid = { version = "1.6", features = ["v4"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "masking_bench"
harness = false
