[package]
name = "wrkflw-ui"
version.workspace = true
edition.workspace = true
description = "Terminal user interface for wrkflw workflow execution engine"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
wrkflw-models = { path = "../models", version = "0.5.0" }
wrkflw-evaluator = { path = "../evaluator", version = "0.5.0" }
wrkflw-executor = { path = "../executor", version = "0.5.0" }
wrkflw-logging = { path = "../logging", version = "0.5.0" }
wrkflw-utils = { path = "../utils", version = "0.5.0" }
wrkflw-github = { path = "../github", version = "0.5.0" }

# External dependencies
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
regex.workspace = true
futures.workspace = true
