[package]
name = "wrkflw-validators"
version.workspace = true
edition.workspace = true
description = "Workflow validation functionality for wrkflw execution engine"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
wrkflw-models = { path = "../models", version = "0.5.0" }
wrkflw-matrix = { path = "../matrix", version = "0.5.0" }

# External dependencies
serde.workspace = true
serde_yaml.workspace = true
